<resources>
    <string name="app_name">GithubClone</string>

    <string name="txt_home_page">Home</string>
    <string name="txt_notification_page">Notifications</string>
    <string name="txt_explore_page">Explore</string>
    <string name="txt_profile_page">Profile</string>
    <string name="txt_my_work">My Work</string>
    <string name="txt_for_you">For You</string>
    <string name="txt_trending">Trending</string>

    <string name="txt_issues">Issues</string>
    <string name="txt_pull_requests">Pull Requests</string>
    <string name="txt_discussions">Discussions</string>
    <string name="txt_repositories">Repositories</string>
    <string name="txt_organizations">Organizations</string>
    <string name="txt_starred">Starred</string>
    <string name="txt_favorites">Favorites</string>
    <string name="txt_add_favorites">Add Favorites</string>
    <string name="txt_shortcuts">Shortcuts</string>
    <string name="txt_the_things_you_need">The things you need, one tap away</string>
    <string name="txt_fast_access">Fast access your lists of Issues, Pull Requests, or Discussions</string>
    <string name="txt_get_started">Get Started</string>
    <string name="txt_add_favorite_repositories">Add favorite repositories for quick access at any time, without having to search</string>
    <string name="txt_inbox">Inbox</string>
    <string name="txt_android_kotlin">Android-Kotlin-MVI-Clean Architecture</string>
    <string name="txt_used_technologies">📝 Android + Kotlin + Modularization + Gradle Dependency management + Gradle written in Kotlin DSL + Custom Gradle Plugin + MVVM + Dagger</string>
    <string name="txt_github_user">Molbrahim15</string>
    <string name="txt_line1">⭐ 2686 🔵 Kotlin</string>
    <string name="txt_line2">Ⓒ 34 Contributors ›</string>
    <string name="txt_star">✰ star</string>
    <string name="txt_all_caught_up">All caught up!</string>
    <string name="txt_take_a_break">Take a break, write some code, and do what you do best.</string>
    <string name="txt_unread">Unread</string>
    <string name="txt_repository">Repository</string>
    <string name="txt_new">New</string>
    <string name="txt_fullname">Nurullaxo\'jayev Muhammadrizo</string>
    <string name="txt_username">muhammadrizo2003</string>
    <string name="txt_later">Later</string>
    <string name="txt_repository_name">SimpleRecyclerViewKotlin</string>
    <string name="txt_popular">Popular</string>
    <string name="txt_seventy_four">74</string>
    <string name="txt_zero">0</string>
    <string name="txt_one">1</string>
    <string name="txt_sign_in_with_github">Sign in with Github</string>
    <string name="txt_sign_in_with_github_enterprise">Sign in with Github enterprise</string>
    <string name="txt_sign_in_privacy_policy">By signing in you accept our Terms of use and Privacy policy</string>
    <string name="txt_today">Today</string>
    <string name="txt_language">Language</string>
    <string name="txt_spoken_language">Spoken Language</string>
    <string name="txt_something_went_wrong">Something Went Wrong</string>
    <string name="txt_code">code</string>
    <string name="txt_repos_with">Repositories with</string>
    <string name="txt_users_with">Users with</string>
    <string name="txt_search_all_of_github">Search all of Github for People, Repositories, Organizations, Issues, and Pull Requests.</string>
    <string name="txt_find_your_stuff">Find Your Stuff</string>
    <string name="txt_search_github">Search Github</string>
    <string name="txt_error">error</string>
    <string name="txt_login_success">Login success!</string>
    <string name="txt_job">I am an android developer</string>
    <string name="txt_tashkent">📍 Tashkent</string>
    <string name="txt_profile_details">Ⓒ 10 followers • 3 following</string>
    <string name="txt_focusing">🎯 Focusing</string>
    <string name="txt_customize_your_notification">Customize your notification experience</string>
    <string name="txt_customize_your_experience">Customize your experience</string>
    <string name="txt_setup_new_push_notifications">Set up new push notifications, working hours, and customize swipe options.</string>
</resources>
