<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    style="@style/Widget.MaterialComponents.CardView"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/im_profile" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="8dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/im_profile"
                    app:shapeAppearanceOverlay="@style/circle" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_android_kotlin"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_github_user"
                        android:textAllCaps="false"
                        android:textColor="@color/light_black"
                        android:textSize="16sp"
                        android:textStyle="normal" />


                </LinearLayout>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:letterSpacing="0.05"
                android:text="@string/txt_used_technologies"
                android:textAllCaps="false"
                android:textColor="@color/light_black"
                android:textSize="16sp"
                android:textStyle="normal" />


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:letterSpacing="0.1"
                android:text="@string/txt_line1"
                android:textAllCaps="false"
                android:textColor="@color/light_black"
                android:textSize="16sp"
                android:textStyle="normal" />


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:letterSpacing="0.05"
                android:text="@string/txt_line2"
                android:textAllCaps="false"
                android:textColor="@color/light_black"
                android:textSize="16sp"
                android:textStyle="normal" />

            <Button
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/txt_star"
                android:textAllCaps="true"
                android:textColor="@color/bottom_view_item_selected"
                android:textSize="14sp"
                android:textStyle="normal" />

        </LinearLayout>


    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true" />

</FrameLayout>







