<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_view_profile"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:scaleType="centerCrop"
                android:src="@drawable/im_profile"
                app:shapeAppearanceOverlay="@style/circle" />

            <TextView
                android:id="@+id/text_view_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/txt_username"
                android:textAllCaps="false"
                android:textColor="@color/light_black"
                android:textSize="16sp"
                android:textStyle="normal" />

        </LinearLayout>

        <TextView
            android:id="@+id/text_view_repo_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:text="@string/txt_repository_name"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/text_view_repo_bio_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:text="@string/txt_setup_new_push_notifications"
            android:textAllCaps="false"
            android:textColor="@color/light_black"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/text_view_repo_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:letterSpacing="0.1"
            android:text="@string/txt_line1"
            android:textAllCaps="false"
            android:textColor="@color/light_black"
            android:textSize="16sp"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/for_line" />

</LinearLayout>

