<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="10dp">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:padding="30dp"
        android:scaleType="centerCrop"
        android:src="@drawable/im_github_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_sign_in_with_github"
            style="@style/ThemeOverlay.Material3.Button.ElevatedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_sign_in_with_github"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/btn_sign_in_with_github_enterprise"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/txt_sign_in_with_github_enterprise"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/text_view_privacy_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:autoLink="all"
            android:gravity="center"
            android:text="@string/txt_sign_in_privacy_policy"
            android:textAllCaps="false"
            android:textColor="@color/light_black"
            android:textColorLink="@color/purple_500"
            android:textSize="16sp"
            android:textStyle="normal" />

    </LinearLayout>

</FrameLayout>
