<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.Material3.CardView.Outlined"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="10dp"
    android:background="@drawable/view_stroke_color"
    android:backgroundTint="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_view_profile"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:scaleType="centerCrop"
                android:src="@drawable/im_profile"
                app:shapeAppearanceOverlay="@style/circle" />

            <TextView
                android:id="@+id/text_view_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/txt_username"
                android:textAllCaps="false"
                android:textColor="@color/light_black"
                android:textSize="16sp"
                android:textStyle="normal" />

        </LinearLayout>

        <TextView
            android:id="@+id/text_view_repo_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/txt_repository_name"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="normal" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/text_view_star_count_and_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:letterSpacing="0.1"
            android:text="@string/txt_line1"
            android:textAllCaps="false"
            android:textColor="@color/light_black"
            android:textSize="16sp"
            android:textStyle="normal" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:background="@drawable/view_stroke_color"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground" />

</FrameLayout>



